add privacy policy

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
 
-
 <body>
   <div class="hamburger-menu">
     <input type="checkbox" id="menu-btn-check">
@@ -32,7 +31,7 @@
   <header id="header">
       <div class="header-wrapper">
         <div class="header-name">
-          <h1 id="top", class="site-title">株式会社<span> 勇 往</span></h1>
+          <h1 id="top", class="site-title">株式会社<span>勇 往</span></h1>
           <p>YOU ONE CORPORATION</p>
         </div>
         <nav class="navi">
@@ -223,7 +222,10 @@
 
 
     <footer class="footer">
-        <p><small>&copy; YOU ONE CORPORATION All Rights Reserved.</small></p>
+        <div class="footer-inner">
+          <p><small><a href="Privacy-Policy.html">Privacy Policy</a></small></p>
+          <p><small>&copy; YOU ONE CORPORATION All Rights Reserved.</small></p>
+        </div>
     </footer>
     <script>
       const PageTopBtn = document.getElementById('js-scroll-top');
