add UTF-8 reset CSS in PP

--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
     <title>株式会社 勇往</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="中国OEM生産アパレルメーカー「株式会社 勇往 (YOU ONE CORPORATION)」の企業サイトです">
     <script src="https://kit.fontawesome.com/69f586e491.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
