--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>株式会社 勇往</title>
     <meta name="description" content="中国OEM生産アパレルメーカー「株式会社 勇往 (YOU ONE CORPORATION)」の企業サイトです">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
