--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <!-- <link rel="stylesheet" href="css/reset.css"> -->
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <title>株式会社 勇往</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="中国OEM生産アパレルメーカー「株式会社 勇往 (YOU ONE CORPORATION)」の企業サイトです">
-    <script src="https://kit.fontawesome.com/69f586e491.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
 <body>
@@ -38,7 +38,15 @@
 <p>お客様からお預かりした個人情報は、不正アクセス、紛失、漏えい等が起こらないよう、慎重かつ適切に管理します。</p>
 <h2>個人情報の利用目的</h2>
 <p>当サイトでは、お客様からのお問い合わせやサービスへのお申し込み等を通じて、お客様の氏名、生年月日、住所、電話番号、メールアドレス等の個人情報をご提供いただく場合があります。その場合は、以下に示す利用目的のために、適正に利用するものと致します。</p>
-<ul><li>お客様からのお問い合わせ等に対応するため。</li><li>お客様からお申し込みいただいたサービス等の提供のため。</li><li>メールマガジン等の配信、セミナーやイベントのご案内等のため。</li><li>当サイトが実施するアンケートへのご協力のお願いのため</li><li>商品や景品、プレゼント等の発送のため。</li><li>当サイトのサービス向上・改善、新サービスを検討するための分析等を行うため。</li><li>個人を識別できない形で統計データを作成し、当サイトおよびお客様の参考資料とするため。 </li></ul>
+<ul>
+  <li>お客様からのお問い合わせ等に対応するため。</li>
+  <li>お客様からお申し込みいただいたサービス等の提供のため。</li>
+  <li>メールマガジン等の配信、セミナーやイベントのご案内等のため。</li>
+  <li>当サイトが実施するアンケートへのご協力のお願いのため</li>
+  <li>商品や景品、プレゼント等の発送のため。</li>
+  <li>当サイトのサービス向上・改善、新サービスを検討するための分析等を行うため。</li>
+  <li>個人を識別できない形で統計データを作成し、当サイトおよびお客様の参考資料とするため。 </li>
+</ul>
 <h2>個人情報の第三者提供</h2>
 <p>お客様からお預かりした個人情報を、個人情報保護法その他の法令に基づき開示が認められる場合を除き、ご本人様の同意を得ずに第三者に提供することはありません。</p>
 <h2>個人情報の開示・訂正・削除について</h2>
@@ -65,7 +73,7 @@
   </div>
 </footer>
 
-<script>
+  <script>
     const PageTopBtn = document.getElementById('js-scroll-top');
     PageTopBtn.addEventListener('click', () =>{
     window.scrollTo({
